force-app/main/default/objects/Transporteur__c/fields/Delai_de_livraison__c.field-meta.xml
<CustomField>
    <fullName>Delai_de_livraison__c</fullName>
    <description>Nombre de jours nécessaires pour livrer</description>
    <label>Délai de livraison</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>