force-app/main/default/objects/Transporteur__c/fields/Pays__c.field-meta.xml
<CustomField>
    <fullName>Pays__c</fullName>
    <label>Pays</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>France</fullName>
            </value>
            <value>
                <fullName>Belgique</fullName>
            </value>
            <value>
                <fullName>Suisse</fullName>
            </value>
            <value>
                <fullName>Luxembourg</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>