force-app/main/default/objects/Transporteur__c/fields/Prix__c.field-meta.xml
<CustomField>
    <fullName>Prix__c</fullName>
    <label>Prix</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>