force-app/main/default/objects/Transporteur__c/validationRules/AumoinsUnPays.validationRule-meta.xml
<ValidationRule>
    <fullName>AumoinsUnPays</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(INCLUDES(Pays__c, &quot;France&quot;)) &amp;&amp;
NOT(INCLUDES(Pays__c, &quot;Belgique&quot;)) &amp;&amp;
NOT(INCLUDES(Pays__c, &quot;Suisse&quot;)) &amp;&amp;
NOT(INCLUDES(Pays__c, &quot;Luxembourg&quot;))</errorConditionFormula>
    <errorDisplayField>Pays__c</errorDisplayField>
    <errorMessage>Le transporteur doit desservir au moins un pays.</errorMessage>
</ValidationRule>