force-app/main/default/objects/Transporteur__c/validationRules/DelaideLivraison_positif.validationRule-meta.xml
<ValidationRule>
    <fullName>DelaideLivraison_positif</fullName>
    <active>true</active>
    <errorConditionFormula>Delai_de_livraison__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Delai_de_livraison__c</errorDisplayField>
    <errorMessage>Le délai de livraison doit être supérieur à 0.</errorMessage>
</ValidationRule>