force-app/main/default/objects/Transporteur__c/validationRules/PrixdeLivraison_positif.validationRule-meta.xml
<ValidationRule>
    <fullName>PrixdeLivraison_positif</fullName>
    <active>true</active>
    <errorConditionFormula>Prix__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Prix__c</errorDisplayField>
    <errorMessage>Le prix de livraison doit être supérieur à 0.</errorMessage>
</ValidationRule>